@@ -28,6 +28,9 @@
 - Added support for RSASSA-PSS signing and verifying, by Chris Collis
 - Added support for disabling padding when using RSA encryption,
   by Chris Collis
+- ASN1_INTEGERs can now be larger than fits in an int, for example to support
+  X509 certificates with large serial numbers, 
+  patch by Mikhail Vorozhtsov and testcase by Barry G.
 - Reverted a change done in 0.17 to m2urllib2 which changed urls to include
   host when it should stay as it was
 - httpslib no longer uses urllib; instead it uses urlparse for url parsing
